--- a/templates/booking.html
+++ b/templates/booking.html
@@ -13,5 +13,8 @@
         <label for="places">How many places?</label><input type="number" name="places" id=""/>
         <button type="submit">Book</button>
     </form>
+{% if error_message %}
+<p>{{error_message}}</p>
+{%endif%}
 </body>
 </html>
