--- a/templates/clubs.html
+++ b/templates/clubs.html
@@ -5,9 +5,8 @@
     <title>Summary | GUDLFT Registration</title>
 </head>
 <body>
-        <h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a>
+        <h2>Clubs_list</h2><a href="{{url_for('logout')}}">Logout</a>
 
-    Points available: {{club['points']}}
     <h3>Clubs:</h3>
     <ul>
         {% for club in clubs%}
