implemented locustfile.py
added links between index and clubsTable

--- a/templates/clubs.html
+++ b/templates/clubs.html
@@ -5,7 +5,7 @@
     <title>Summary | GUDLFT Registration</title>
 </head>
 <body>
-        <h2>Clubs_list</h2><a href="{{url_for('logout')}}">Logout</a>
+        <h2>Clubs_list</h2><a href="{{url_for('index')}}">Back to index</a>
 
     <h3>Clubs:</h3>
     <ul>
